--- a/mjml-gulp/mjml-gulp-starter/src/0909.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/0909.mjml
@@ -85,11 +85,11 @@
                 <mj-text font-family="Arial, sans-serif">
                     <p style="margin: 0; padding-bottom: 10px; padding-left: 15px;"><a style="color: #93bf3d; font-size: 18px;
                     font-weight:bold;"
-                                                                                       href="https://lextorium.com/courses/vebinary/subsidiarnaya-otvetstvennost-trendy-sudebnoy-praktiki-2020.html">
+                                                                                       href="https://lextorium.com/news/ostorozhno-moesk-vnedogovornoe-potreblenie-elektroenergii-pri-vozvedenii-obektov-kapitalnogo-stroitelstva.html">
 Кейс “Красивый юридический полет”:
 как сэкономить для клиента 390 миллионов рублей?                    </a></p>
                     <p style="margin: 0; padding-bottom: 10px;  padding-left: 15px;font-size: 16px;">
-                    <a class="link" href="#"><b>ПОДРОБНОСТИ</b></a> за 5 минут
+                    <a class="link" href="https://lextorium.com/news/ostorozhno-moesk-vnedogovornoe-potreblenie-elektroenergii-pri-vozvedenii-obektov-kapitalnogo-stroitelstva.html"><b>ПОДРОБНОСТИ</b></a> за 5 минут
                     </p>
                     
                 </mj-text>
