--- a/mjml-gulp/mjml-gulp-starter/src/prototypes/header.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/prototypes/header.mjml
@@ -9,7 +9,7 @@
 </mj-section>
 <mj-section width="600px" background-color="#ffffff">
     <mj-column width="250px">
-        <mj-text width="100%" align="center">
+        <mj-text width="100%" align="center" padding-top="20px">
             <a href="https://lextorium.com">
                 <img src="https://raw.githubusercontent.com/Olovyannikov/Lextorium/master/mjml-gulp/mjml-gulp-starter/src/img/logo.png" alt="Lextorium logo"
                      align="center"
