--- a/mjml-gulp/mjml-gulp-starter/src/1109.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/1109.mjml
@@ -33,7 +33,7 @@
                     </p>
 
                     <p class="paragraph">
-                    Знакомая Вам картина: <br/>
+                    Знакома Вам картина: <br/>
                     должник  ускользает, используя различные трюки. И делает это настолько виртуозно, что Вы даже не можете ввести его в статус банкрота?
 
                     </p>
