--- a/mjml-gulp/mjml-gulp-starter/src/1109.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/1109.mjml
@@ -32,10 +32,10 @@
                     Если у Вы поняли, о чем речь и читаете это, значит у нас опять получилось обойти Ваш спам - фильтр! Может, таким двум талантам по пути?
                     </p>
 
-                    <p class="paragraph">
-                    Знакома Вам картина: <br/>
-                    должник  ускользает, используя различные трюки. И делает это настолько виртуозно, что Вы даже не можете ввести его в статус банкрота?
-
+                    <p class="paragraph" style="text-align: center">
+                    Знакома Вам картина: 
+                    </p>
+                    <p class="paragraph">                    должник  ускользает, используя различные трюки. И делает это настолько виртуозно, что Вы даже не можете ввести его в статус банкрота?
                     </p>
                 </mj-text>
             </mj-column>
