--- a/mjml-gulp/mjml-gulp-starter/src/materials.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/materials.mjml
@@ -35,7 +35,7 @@
             <mj-column>
                 <mj-text>
                      <p class="paragraph">
-                        Благодарим Вас за интерес к курсу “{$resource.pagetitle}”!
+                        Благодарим Вас за интерес к курсу “{$resource.pagetitle}”! <br/>
                         Все материалы Вы найдете во вложении к данному письму.
                      </p>
                 </mj-text>
@@ -65,57 +65,17 @@
         </mj-section>
 
         <mj-spacer height="20px"></mj-spacer>
-
-       <mj-section>
-           <mj-column>
-               <mj-text>
-               <p class="paragraph">
-                   Если у Вас есть вопросы, Вы можете задать их нашему менеджеру
-               </p>
-               </mj-text>
-           </mj-column>
-       </mj-section>
-
-        <mj-section>
+                <mj-section>
             <mj-column>
                 <mj-text>
                     <p class="paragraph">
-                        Напишите Нине, Вашему проводнику к мир юридических знаний: <br/>
+                        Остались вопросы? Задайте их нашим менеджерам: <br/>
                         <span style="padding-top: 10px; display: inline-block"><img src="https://funkyimg.com/i/36PUE.jpg"><a href="https://wa.me/79157559800/" class="link">+7 (915) 755-98-00 </a>
                         или
                         <span><img src="https://funkyimg.com/i/36PUF.jpg"><a href="tel:+79157559800" class="link">+7 (915) 755-98-00 </a>
 
                     </p>
                 </mj-text>
-            </mj-column>
-        </mj-section>
-
-        <mj-section background-color="#f2f2f2">
-            <mj-column>
-                <mj-text font-weight="bold" padding-bottom="10px">
-                    <p class="paragraph" style="font-weight: bold;">
-                        Задайте вопрос по теме семинара вашему проводнику в мир юридических знаний
-                    </p>
-                </mj-text>
-            </mj-column>
-        </mj-section>
-
-        <mj-section background-color="#f2f2f2">
-            <mj-column>
-                <mj-image padding-bottom="20px" src="https://funkyimg.com/i/2Rw5Y.jpg" width="150"/>
-            </mj-column>
-            <mj-column>
-                 <mj-text>
-                 <p class="paragraph">
-                    <span><img src="https://funkyimg.com/i/36PUE.jpg"> </span><a href="https://wa.me/79157559800/" class="link">+7 (915) 755-98-00</a>
-                </p>
-                <p class="paragraph">
-                    <span><img src="https://funkyimg.com/i/36PVB.jpg"> </span><a href="https://join.skype.com/invite/pfEtugwzqWVd" class="link">drive-9</a>
-                </p>
-                <p class="paragraph">
-                    <span><img src="https://funkyimg.com/i/36PUF.jpg"> </span><a href="tel:+79157559800" class="link">+7 (915) 755-98-00</a>
-                </p>
-                 </mj-text>
             </mj-column>
         </mj-section>
         <mj-spacer height="20px"></mj-spacer>
