--- a/mjml-gulp/mjml-gulp-starter/src/2209.mjml
+++ b/mjml-gulp/mjml-gulp-starter/src/2209.mjml
@@ -82,7 +82,7 @@
     <mj-column>
         <mj-text>
             <p class="paragraph">
-            Наши друзья – <a href="https://civilist.club/" class="link">Клуб цивилистов</a> - осуществят погружение в вопросы рисков лизингополучателя уже 8 октября. <br/>
+            Наши друзья – <a href="https://privlaw-conf.ru/semi0810" class="link">Клуб цивилистов</a> - осуществят погружение в вопросы рисков лизингополучателя уже 8 октября. <br/>
             Присоединяйтесь к вечернему онлайн-семинару <b>«Договор лизинга: история, полная опасностей»</b>. 
             </p>
         </mj-text>
